# mock-traffic-generator

./: .gitignore  Cargo.toml  README.md  labels.json
public/: index.html
src/: main.rs
traffic_generator/: Cargo.toml
traffic_generator/public/: index.html
traffic_generator/src/: main.rs
