[package]
name = "traffic_generator"
version = "0.1.0"
description = "a mock data generator with sockets"
license = "MIT"
homepage = "https://github.com/BeStateless/mock-traffic-generator"
respository = "https://github.com/BeStateless/mock-traffic-generator"
authors = ["Emma Ramirez <ramirez.emma.g@gmail.com>"]
exclude = [
  "labels.json",
  ".travis.yml"
]

[dependencies]
hyper = "*"
rustc-serialize = "*"
rand = "*"
ws = "*"
env_logger = "*"

[dependencies.chrono]
version = "0.2.0"
features = ["rustc-serialize"]
